# origin-risk-profile

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/config/: settings.py
app/routers/: base.py  v1.py
app/routers/resources/: base.py  risk_profile.py
app/schemas/: risk_profile.py
app/schemas/request/: risk_profile.py
app/schemas/response/: risk_profile.py
app/services/: risk_profile.py
app/tests/: conftest.py
app/tests/e2e/: test_api.py
app/tests/unit/: test_auto_appetite.py  test_disability_appetite.py  test_home_appetite.py  test_life_appetite.py
app/tests/unit/helper_methods/: test_auto_score_increment_by_year.py  test_base_score.py  test_general_score_increments.py  test_risk_profile_from_score.py
dev/: Dockerfile
