[tool.poetry]
name = "originfinancial"
version = "0.1.0"
description = "Dependencies for Origin Finalcial SWE Challenge"
authors = ["Matheus Mansour <matheus.mansourelbatti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
fastapi = "^0.71.0"
starlette = "^0.17.1"
uvicorn = "^0.16.0"
pytest = "^6.2.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
